code/SampleProgramToInterface/src/main/java/com/sample/bad/GodClass.java
package com.sample.bad;

public class GodClass {

    public boolean isRooted() {
        boolean a = true;
        boolean b = true;
        boolean c = true;
        boolean d = true;
        boolean e = true;

        if (a == true) {
            return true;
        } else if (b == true) {
            return true;
        } else if (c == true) {
            return true;
        } else if (d == true) {
            return true;
        } else if (e == true) {
            return true;
        } else {
            return false;
        }
    }
}  